linkerd-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: linkerd-dashboard
  namespace: linkerd
spec:
  tls:
    - hosts:
        - linkerd-dashboard.phpuk19.plgrnd.be
  rules:
    - host: linkerd-dashboard.phpuk19.plgrnd.be
      http:
        paths:
          - path: /
            backend:
              serviceName: linkerd-web
              servicePort: 8084
